<resources>
    <string name="app_name">NBU</string>
    <string name="mobile">Mobile</string>
    <string name="business">Business</string>
    <string name="always_check">Always check</string>
    <string name="phoneNumber">Phone number</string>
    <string name="sms">SMS</string>
    <string name="signIn">Sign In</string>
    <string name="top_payments">Top payments</string>
    <string name="last_added">Last added</string>
    <string name="news">News</string>
    <string name="see_all">See all</string>
    <string name="get_sms">Get SMS</string>
    <string name="balance">Balance</string>
    <string name="card_data">Card data</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="notification">Notification</string>
    <string name="sign_off">Sign OFF</string>
    <string name="main">Main</string>
    <string name="pay">Pay</string>
    <string name="report">Report</string>
    <string name="other">Other</string>
    <string name="my_cards">My cards</string>
    <string name="analize">Analize</string>
    <string name="transfer">Transfer</string>
    <string name="_20_day">20 day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="choose_another_date">Choose another date</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount</string>

    <string name="payee">Payee</string>
    <string name="dateTime">Date and time</string>
    <string name="status">Status</string>
    <string name="account">Account</string>
    <string name="pay_again">Pay again</string>
    <string name="payment">Payment</string>
    <string name="favorite">Favorite</string>
    <string name="choosed_card">Choosed card</string>
    <string name="login">Login</string>
    <string name="category">Category</string>
</resources>
