<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <Button
        android:id="@+id/chooseMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mobile"
        style="@style/MobileAccentButton"
        android:layout_margin="16dp"
        />
    <Button
        android:id="@+id/chooseBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/business"
        style="@style/BusinessAccentButton"
        android:layout_margin="16dp"

        />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/alwaysCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/always_check"
        android:layout_marginTop="16dp"
        style="@style/pText"
        />
</LinearLayout>