<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/balancePager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.pixelcan.inkpageindicator.InkPageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="6dp"
                app:animationDuration="120"
                app:currentPageIndicatorColor="#70000000"

                app:dotDiameter="8dp"
                app:dotGap="8dp"

                app:pageIndicatorColor="#20000000" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"

                >

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:padding="16dp"
                    app:srcCompat="@drawable/icon_payment" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/choosed_card"
                    android:textColorHint="@color/pText">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/choosedCard"
                        android:layout_width="match_parent"
                        android:text="card number 1"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:gravity="center_vertical" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.50dp"
                        android:background="@color/pText" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"

                >

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:padding="16dp"
                    app:srcCompat="@drawable/icon_account" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login"
                    android:textColorHint="@color/pText">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appCompatEditText"
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"

                        android:gravity="center_vertical" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.50dp"
                        android:background="@color/pText" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"

                >

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:padding="16dp"
                    app:srcCompat="@drawable/icon_pay_light"

                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/amount"
                    android:textColorHint="@color/pText">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:maxLength="9"

                        android:background="@android:color/transparent"
                        android:gravity="center_vertical" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.50dp"
                        android:background="@color/pText" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"

                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    android:theme="@style/SeeAllButtonMobile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="16dp"
                    android:text="@string/pay"
                    android:theme="@style/AccentButtonMobile" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>