<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:layout_marginRight="16dp"
        >

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icon_payment_primary"
            android:padding="16dp"
            android:layout_marginRight="16dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PTextStyle"
                android:text="@string/amount"
                android:textColor="#40000000"

                android:paddingTop="16dp"
                />
            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SummaStyle"
                android:text="1 000 000 sum"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:paddingBottom="16dp"
                />

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"

            >
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_payment"
                android:padding="16dp"
                android:layout_marginRight="16dp"

                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/payee"
                android:textColorHint="@color/pText"

                >
                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Beeline OOO"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.50dp"
                    android:background="@color/pText"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="16dp"

                >
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/icon_account"
                    android:padding="16dp"
                    android:layout_marginRight="16dp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/account"
                    android:textColorHint="@color/pText"
                    >

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/appCompatEditText"
                        android:background="@android:color/transparent"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:focusable="false"

                        android:gravity="center_vertical"
                        android:text="+998 90 9787695" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.50dp"
                        android:background="@color/pText"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="16dp"

                >
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/icon_date_time"
                    android:padding="16dp"
                    android:layout_marginRight="16dp"

                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/dateTime"
                    android:textColorHint="@color/pText"
                    >
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="May 10 2016 20:00:00"
                        android:background="@android:color/transparent"

                        android:focusable="false"

                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.50dp"
                        android:background="@color/pText"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="16dp"
                >
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/icon_status"
                    android:padding="16dp"
                    android:layout_marginRight="16dp"

                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/status"
                    android:textColorHint="@color/pText"
                    >
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Success"
                        android:background="@android:color/transparent"

                        android:focusable="false"

                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.50dp"
                        android:background="@color/pText"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AccentButtonMobile"
                android:text="@string/pay_again"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>